21/01/18 Julien Dutheil
* Added OrderFilter.

16/12/17 Julien Dutheil
* Added OutputAsTable filter
* Improved LiftOver

18/05/17 -*- Version 1.2.0 -*-

13/04/17 Julien Dutheil
* Possibility to allow for dots in maf alignments (treated as gaps)
* VCF output can included non-variable sites (experimental)
* Added support for tree-based filtering

04/06/16 Julien Dutheil
* Alignment filters now accept frequencies as maximum amount of gaps.

23/06/16 Julien Dutheil
* Possibility to count characters for a selection of species only.

18/06/16 Julien Dutheil
* Added call to external tree reconstruction program.

26/04/16 Julien Dutheil
* Added distance matrix output.
* Added RemoveEmptySequences filter.

09/02/16 Julien Dutheil
* Features in BedGraph format are now supported.
* New LiftOver filter.

18/12/15 Julien Dutheil
* SequenceStatistics can now write in compressed file.

10/12/15 Julien Dutheil
* Added PLINK export filter.

22/11/15 Julien Dutheil
* Fixed bug in FeatureFilter in case two features are exactly consecutive.

20/10/15 Julien Dutheil
* Added Tajima's pi to diversity statistics.

13/01/15 Julien Dutheil
* More options for OutputAlignments (output file names).

09/01/15 Julien Dutheil
* Add formatting options (sequence names) for trees and distance matrices.
* ML parameter estimation outputs parameter names in terminal.

26/09/14 -*- Version 1.1.0 -*-

05/04/14 Julien Dutheil
* Added ML model fit (stationary and non-stationary).

25/07/13 -*- Version 1.0.0 -*-

15/01/2010 Julien Dutheil
* Initial version.