@@ -1,3 +1,7 @@
+09/03/18 Julien Dutheil
+* Logfile can now be disabled
+* Merge filter can now rename chimeric contigs to avoid long concatenated names.
+
 21/01/18 Julien Dutheil
 * Added OrderFilter.
 
